Fix: make navbar responsive and add spacing on mobile layouts

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -62,3 +62,28 @@
   max-width: 100%;
   border-radius: 100%;
 }
+
+@media (max-width: 600px) {
+  .navbar {
+    height: auto;
+  }
+
+  .navbar .container {
+    padding: 2rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .navbar .container .nav-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .navbar .container .nav-right .nav-item {
+    margin: 0 0 1rem;
+  }
+}
